Updated the original data
• The following file has been manually updated in Excel:
2. Average remuneration of national civil servants in central public administration [prc_rem_avg].csv

--- a/EU_Civil_Servants_Salary-data_wrangling.ipynb
+++ b/EU_Civil_Servants_Salary-data_wrangling.ipynb
@@ -15,6 +15,29 @@
    }
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "LAST UPDATE: 22.08.22 17:37:26\n",
+    "EXTRACTION DATE: 29.08.22 11:31:53\n",
+    "SOURCE OF DATA: Eurostat\n",
+    "\n",
+    "### Column names and description of the values it holds\n",
+    "TIME: Year and\n",
+    "GEO: Country name\n",
+    "UNIT: Euro/Purchasing power standard (PPS)\n",
+    "INDIC_IL: Mean and Median of the net income\n",
+    "CITIZEN: EU, Non-EU, Foreign country, Reporting country\n",
+    "SEX: Total, Males, Females\n",
+    "AGE: From 18 to 54 years; From 18 to 59 years; From 18 to 64 years; 18 years or over; From 20 to 64 years; From 25 to 54 years; From 25 to 59 years; From 55 to 64 years; 55 years or over; 60 years or over; 65 years or over"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
@@ -71,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "outputs": [],
    "source": [
     "# make column names lower case\n",
@@ -86,19 +109,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "outputs": [
     {
      "data": {
-      "text/plain": "0      Net remuneration in nominal terms / real terms\n1      Net remuneration in nominal terms / real terms\n2      Net remuneration in nominal terms / real terms\n3      Net remuneration in nominal terms / real terms\n4      Net remuneration in nominal terms / real terms\n                            ...                      \n243    Net remuneration in nominal terms / real terms\n244    Net remuneration in nominal terms / real terms\n245    Net remuneration in nominal terms / real terms\n246    Net remuneration in nominal terms / real terms\n247    Net remuneration in nominal terms / real terms\nName: lcstruct, Length: 248, dtype: object"
+      "text/plain": "array(['2014S2', '2015S2', '2016S2', '2017S2', '2018S2', '2019S2',\n       '2020S2', '2021S2'], dtype=object)"
      },
-     "execution_count": 13,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_salary.lcstruct"
+    "df_salary.time.unique()"
    ],
    "metadata": {
     "collapsed": false,
@@ -109,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "outputs": [],
    "source": [],
    "metadata": {
