--- a/EU_Civil_Servants_Salary-data_wrangling.ipynb
+++ b/EU_Civil_Servants_Salary-data_wrangling.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "source": [
     "# Project name: Civil Servants Remuneration in the EU\n",
-    "## Part 2: 2. Average remuneration of national civil servants in central public administration [prc_rem_avg]\n",
+    "## Part 2: Average remuneration of national civil servants in central public administration [prc_rem_avg]\n",
     "### Step 1: Data wrangling"
    ],
    "metadata": {
@@ -21,14 +21,18 @@
     "EXTRACTION DATE: 29.08.22 11:31:53\n",
     "SOURCE OF DATA: Eurostat\n",
     "\n",
-    "### Column names and description of the values it holds\n",
-    "TIME: Year and\n",
-    "GEO: Country name\n",
+    "### Column names and the values it holds\n",
+    "TIME: Year\n",
+    "\n",
+    "GEO: EU country name\n",
+    "\n",
+    "LCSTRUCT: Net remuneration in nominal terms / real terms\n",
+    "\n",
+    "P_ADJ: Nominal value\n",
+    "\n",
     "UNIT: Euro/Purchasing power standard (PPS)\n",
-    "INDIC_IL: Mean and Median of the net income\n",
-    "CITIZEN: EU, Non-EU, Foreign country, Reporting country\n",
-    "SEX: Total, Males, Females\n",
-    "AGE: From 18 to 54 years; From 18 to 59 years; From 18 to 64 years; 18 years or over; From 20 to 64 years; From 25 to 54 years; From 25 to 59 years; From 55 to 64 years; 55 years or over; 60 years or over; 65 years or over"
+    "\n",
+    "Value: Float value"
    ],
    "metadata": {
     "collapsed": false,
@@ -39,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 85,
    "metadata": {
     "collapsed": true,
     "pycharm": {
@@ -54,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 86,
    "outputs": [],
    "source": [
     "# Load the data\n",
@@ -69,14 +73,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 87,
    "outputs": [
     {
      "data": {
-      "text/plain": "     TIME                                                GEO  \\\n0  2014S2  European Union (EU6-1958, EU9-1973, EU10-1981,...   \n1  2014S2  European Union (aggregate changing according t...   \n2  2014S2          European Union - 27 countries (from 2020)   \n3  2014S2                                            Belgium   \n4  2014S2                                           Bulgaria   \n\n                                         LCSTRUCT          P_ADJ  UNIT  \\\n0  Net remuneration in nominal terms / real terms  Nominal value  Euro   \n1  Net remuneration in nominal terms / real terms  Nominal value  Euro   \n2  Net remuneration in nominal terms / real terms  Nominal value  Euro   \n3  Net remuneration in nominal terms / real terms  Nominal value  Euro   \n4  Net remuneration in nominal terms / real terms  Nominal value  Euro   \n\n     Value  \n0  2,289.6  \n1  2,519.2  \n2  2,298.6  \n3  2,647.7  \n4    547.4  ",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>TIME</th>\n      <th>GEO</th>\n      <th>LCSTRUCT</th>\n      <th>P_ADJ</th>\n      <th>UNIT</th>\n      <th>Value</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>2014S2</td>\n      <td>European Union (EU6-1958, EU9-1973, EU10-1981,...</td>\n      <td>Net remuneration in nominal terms / real terms</td>\n      <td>Nominal value</td>\n      <td>Euro</td>\n      <td>2,289.6</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>2014S2</td>\n      <td>European Union (aggregate changing according t...</td>\n      <td>Net remuneration in nominal terms / real terms</td>\n      <td>Nominal value</td>\n      <td>Euro</td>\n      <td>2,519.2</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>2014S2</td>\n      <td>European Union - 27 countries (from 2020)</td>\n      <td>Net remuneration in nominal terms / real terms</td>\n      <td>Nominal value</td>\n      <td>Euro</td>\n      <td>2,298.6</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>2014S2</td>\n      <td>Belgium</td>\n      <td>Net remuneration in nominal terms / real terms</td>\n      <td>Nominal value</td>\n      <td>Euro</td>\n      <td>2,647.7</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>2014S2</td>\n      <td>Bulgaria</td>\n      <td>Net remuneration in nominal terms / real terms</td>\n      <td>Nominal value</td>\n      <td>Euro</td>\n      <td>547.4</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+      "text/plain": "     TIME       GEO                                        LCSTRUCT  \\\n0  2014S2   Belgium  Net remuneration in nominal terms / real terms   \n1  2014S2   Belgium  Net remuneration in nominal terms / real terms   \n2  2014S2  Bulgaria  Net remuneration in nominal terms / real terms   \n3  2014S2  Bulgaria  Net remuneration in nominal terms / real terms   \n4  2014S2   Czechia  Net remuneration in nominal terms / real terms   \n\n           P_ADJ                             UNIT    Value  \n0  Nominal value                             Euro  2 647.7  \n1  Nominal value  Purchasing power standard (PPS)  2 647.7  \n2  Nominal value                             Euro   547.40  \n3  Nominal value  Purchasing power standard (PPS)   993.20  \n4  Nominal value                             Euro   948.50  ",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>TIME</th>\n      <th>GEO</th>\n      <th>LCSTRUCT</th>\n      <th>P_ADJ</th>\n      <th>UNIT</th>\n      <th>Value</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>2014S2</td>\n      <td>Belgium</td>\n      <td>Net remuneration in nominal terms / real terms</td>\n      <td>Nominal value</td>\n      <td>Euro</td>\n      <td>2 647.7</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>2014S2</td>\n      <td>Belgium</td>\n      <td>Net remuneration in nominal terms / real terms</td>\n      <td>Nominal value</td>\n      <td>Purchasing power standard (PPS)</td>\n      <td>2 647.7</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>2014S2</td>\n      <td>Bulgaria</td>\n      <td>Net remuneration in nominal terms / real terms</td>\n      <td>Nominal value</td>\n      <td>Euro</td>\n      <td>547.40</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>2014S2</td>\n      <td>Bulgaria</td>\n      <td>Net remuneration in nominal terms / real terms</td>\n      <td>Nominal value</td>\n      <td>Purchasing power standard (PPS)</td>\n      <td>993.20</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>2014S2</td>\n      <td>Czechia</td>\n      <td>Net remuneration in nominal terms / real terms</td>\n      <td>Nominal value</td>\n      <td>Euro</td>\n      <td>948.50</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
-     "execution_count": 3,
+     "execution_count": 87,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -94,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 88,
    "outputs": [],
    "source": [
     "# make column names lower case\n",
@@ -109,19 +113,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 89,
    "outputs": [
     {
      "data": {
-      "text/plain": "array(['2014S2', '2015S2', '2016S2', '2017S2', '2018S2', '2019S2',\n       '2020S2', '2021S2'], dtype=object)"
+      "text/plain": "     time             geo    value\n0    2014         Belgium  2 647.7\n1    2014        Bulgaria   547.40\n2    2014         Czechia   948.50\n3    2014         Denmark  2 515.6\n4    2014         Germany  3 654.3\n..    ...             ...      ...\n219  2021        Slovenia  1 726.0\n220  2021        Slovakia  1 850.0\n221  2021         Finland  3 665.0\n222  2021          Sweden  3 080.0\n223  2021  United Kingdom      NaN\n\n[224 rows x 3 columns]",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>time</th>\n      <th>geo</th>\n      <th>value</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>2014</td>\n      <td>Belgium</td>\n      <td>2 647.7</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>2014</td>\n      <td>Bulgaria</td>\n      <td>547.40</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>2014</td>\n      <td>Czechia</td>\n      <td>948.50</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>2014</td>\n      <td>Denmark</td>\n      <td>2 515.6</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>2014</td>\n      <td>Germany</td>\n      <td>3 654.3</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>219</th>\n      <td>2021</td>\n      <td>Slovenia</td>\n      <td>1 726.0</td>\n    </tr>\n    <tr>\n      <th>220</th>\n      <td>2021</td>\n      <td>Slovakia</td>\n      <td>1 850.0</td>\n    </tr>\n    <tr>\n      <th>221</th>\n      <td>2021</td>\n      <td>Finland</td>\n      <td>3 665.0</td>\n    </tr>\n    <tr>\n      <th>222</th>\n      <td>2021</td>\n      <td>Sweden</td>\n      <td>3 080.0</td>\n    </tr>\n    <tr>\n      <th>223</th>\n      <td>2021</td>\n      <td>United Kingdom</td>\n      <td>NaN</td>\n    </tr>\n  </tbody>\n</table>\n<p>224 rows × 3 columns</p>\n</div>"
      },
-     "execution_count": 6,
+     "execution_count": 89,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_salary.time.unique()"
+    "# simplify the dataframe\n",
+    "df_salary.time.replace(\"S2\", \"\", regex=True, inplace=True) # remove the S2 notation\n",
+    "df_salary.drop(df_salary[df_salary['unit'] == \"Purchasing power standard (PPS)\"].index, axis=0, inplace=True) # drop the PPS rows\n",
+    "df_salary.drop(['lcstruct', 'p_adj', 'unit'], axis=1, inplace=True) # drop the columns with redundant info\n",
+    "df_salary.reset_index(drop='index') # reset the dataframe index"
    ],
    "metadata": {
     "collapsed": false,
@@ -132,9 +141,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 90,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 224 entries, 0 to 446\n",
+      "Data columns (total 3 columns):\n",
+      " #   Column  Non-Null Count  Dtype \n",
+      "---  ------  --------------  ----- \n",
+      " 0   time    224 non-null    object\n",
+      " 1   geo     224 non-null    object\n",
+      " 2   value   223 non-null    object\n",
+      "dtypes: object(3)\n",
+      "memory usage: 5.4+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "# check the overall data characteristics\n",
+    "df_salary.info()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
    "outputs": [],
-   "source": [],
+   "source": [
+    "# convert the value columns to float64\n",
+    "df_salary.replace(\" \", \"\", regex=True, inplace=True)\n",
+    "df_salary.value = df_salary.value.astype('float64')"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "outputs": [],
+   "source": [
+    "# store the new data\n",
+    "df_salary.to_csv('2. EU Civil Servant average salary.csv')"
+   ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
