--- a/EU-income_data-visualization.ipynb
+++ b/EU-income_data-visualization.ipynb
@@ -2,16 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "source": [],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
-   }
-  },
-  {
-   "cell_type": "markdown",
    "source": [
     "# Project name: Civil Servants Remuneration in the EU\n",
     "## Part 1: Mean and median income by broad group of citizenship (population aged 18 and over)\n",
@@ -26,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "outputs": [],
    "source": [
     "# import relevant libraries\n",
@@ -51,13 +41,17 @@
     "SOURCE OF DATA: Eurostat\n",
     "\n",
     "### Column names and description of the values it holds\n",
-    "TIME: Year\n",
-    "GEO: Country name\n",
-    "UNIT: Euro/Purchasing power standard (PPS)\n",
-    "INDIC_IL: Mean and Median of the net income\n",
-    "CITIZEN: EU, Non-EU, Foreign country, Reporting country\n",
-    "SEX: Total, Males, Females\n",
-    "AGE: From 18 to 54 years; From 18 to 59 years; From 18 to 64 years; 18 years or over; From 20 to 64 years; From 25 to 54 years; From 25 to 59 years; From 55 to 64 years; 55 years or over; 60 years or over; 65 years or over"
+    "time: Year\n",
+    "\n",
+    "geo: Country name\n",
+    "\n",
+    "sex: Total, Males, Females\n",
+    "\n",
+    "age: 18 to 54 years; 18 to 59 years; 18 to 64 years; 18 years or over; 20 to 64 years; 25 to 54 years; 25 to 59 years; 55 to 64 years; 55 years or over; 60 years or over; 65 years or over\n",
+    "\n",
+    "value_median: mean income\n",
+    "\n",
+    "value_median: median income"
    ],
    "metadata": {
     "collapsed": false,
