--- a/EU-income_data-wrangling.ipynb
+++ b/EU-income_data-wrangling.ipynb
@@ -2,16 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "source": [],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
-   }
-  },
-  {
-   "cell_type": "markdown",
    "source": [
     "# Project name: Civil Servants Remuneration in the EU\n",
     "## Part 1: Mean and median income by broad group of citizenship (population aged 18 and over)\n",
@@ -49,12 +39,20 @@
     "\n",
     "### Column names and description of the values it holds\n",
     "TIME: Year\n",
+    "\n",
     "GEO: Country name\n",
+    "\n",
     "UNIT: Euro/Purchasing power standard (PPS)\n",
+    "\n",
     "INDIC_IL: Mean and Median of the net income\n",
+    "\n",
     "CITIZEN: EU, Non-EU, Foreign country, Reporting country\n",
+    "\n",
     "SEX: Total, Males, Females\n",
-    "AGE: From 18 to 54 years; From 18 to 59 years; From 18 to 64 years; 18 years or over; From 20 to 64 years; From 25 to 54 years; From 25 to 59 years; From 55 to 64 years; 55 years or over; 60 years or over; 65 years or over"
+    "\n",
+    "AGE: From 18 to 54 years; From 18 to 59 years; From 18 to 64 years; 18 years or over; From 20 to 64 years; From 25 to 54 years; From 25 to 59 years; From 55 to 64 years; 55 years or over; 60 years or over; 65 years or over\n",
+    "\n",
+    "VALUE: Value of the income"
    ],
    "metadata": {
     "collapsed": false,
