--- a/EU_Civil_Servants_Salary-data_wrangling.ipynb
+++ b/EU_Civil_Servants_Salary-data_wrangling.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "source": [
     "# Project name: Civil Servants Remuneration in the EU\n",
-    "## Part 2: Average remuneration of national civil servants in central public administration [prc_rem_avg]\n",
+    "## Part 2: EU Civil Servant average salary\n",
     "### Step 1: Data wrangling"
    ],
    "metadata": {
@@ -32,7 +32,7 @@
     "\n",
     "UNIT: Euro/Purchasing power standard (PPS)\n",
     "\n",
-    "Value: Float value"
+    "Value: Value of the income"
    ],
    "metadata": {
     "collapsed": false,
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true,
     "pycharm": {
