Updated wrangling notebooks
• added slightly new structure to the notebooks

--- a/EU-income_data-wrangling.ipynb
+++ b/EU-income_data-wrangling.ipynb
@@ -62,6 +62,19 @@
    }
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "## Data Gathering\n",
+    "In the cell below, only the data related to the average income of the EU member states have been loaded. The rest of the files will be wrangled separately in a different notebook."
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
    "cell_type": "code",
    "execution_count": 56,
    "outputs": [],
