--- a/EU_Civil_Servants_Salary-data_wrangling.ipynb
+++ b/EU_Civil_Servants_Salary-data_wrangling.ipynb
@@ -42,6 +42,19 @@
    }
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "## Data Gathering\n",
+    "In the cell below, only the data related to the average income of the EU member states have been loaded. The rest of the files will be wrangled separately in separate notebooks."
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
