--- a/EU-income_data-wrangling.ipynb
+++ b/EU-income_data-wrangling.ipynb
@@ -20,8 +20,7 @@
    "outputs": [],
    "source": [
     "# import relevant libraries\n",
-    "import pandas as pd\n",
-    "import numpy as np"
+    "import pandas as pd"
    ],
    "metadata": {
     "collapsed": false,
