--- a/EU-income_data-wrangling.ipynb
+++ b/EU-income_data-wrangling.ipynb
@@ -49,7 +49,7 @@
    "cell_type": "markdown",
    "source": [
     "## Data Gathering\n",
-    "In the cell below, only the data related to the average income of the EU member states have been loaded. The rest of the files will be wrangled separately in a different notebook."
+    "In the cell below, the data related to the average income of the EU member states have been loaded. The rest of the files will be wrangled separately in a different notebook."
    ],
    "metadata": {
     "collapsed": false,
