Update EU_Number of civil servants.ipynb
- drop redundancy

--- a/EU_Number of civil servants.ipynb
+++ b/EU_Number of civil servants.ipynb
@@ -225,6 +225,21 @@
      "name": "#%%\n"
     }
    }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 309,
+   "outputs": [],
+   "source": [
+    "# drop the redundant columns\n",
+    "df_number.drop(columns=['STATINFO', 'UNIT'], axis=1, inplace=True)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   }
  ],
  "metadata": {
