Update EU_Number of civil servants.ipynb
- quality cleaning

--- a/EU_Number of civil servants.ipynb
+++ b/EU_Number of civil servants.ipynb
@@ -240,6 +240,38 @@
      "name": "#%%\n"
     }
    }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 310,
+   "outputs": [],
+   "source": [
+    "# remove S2 from the year values in TIME column\n",
+    "df_number['TIME'] = df_number['TIME'].str.replace('S2', '')"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 311,
+   "outputs": [],
+   "source": [
+    "# convert Value column to integer\n",
+    "df_number['Value'] = df_number['Value'].str.replace(',', '') # clean the number values\n",
+    "df_number['Value'] = df_number['Value'].str.replace(':', '') # clean the number values\n",
+    "df_number['Value'] = pd.to_numeric(df_number['Value'])"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   }
  ],
  "metadata": {
