Update EU_Number of civil servants.ipynb
- final wrangling updates

--- a/EU_Number of civil servants.ipynb
+++ b/EU_Number of civil servants.ipynb
@@ -272,6 +272,90 @@
      "name": "#%%\n"
     }
    }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 312,
+   "outputs": [],
+   "source": [
+    "# change Germany long name to the short one\n",
+    "index_ger = df_number[df_number['GEO'].str.contains(\"Germany\")].index # store index values to identify rows that contains Germany\n",
+    "df_number.loc[index_ger, \"GEO\"] = 'Germany' # assign the new values"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 313,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "TIME:\n",
+      "['2012' '2013' '2014' '2015' '2016' '2017' '2018' '2019' '2020' '2021']\n",
+      "\n",
+      "\n",
+      "GEO:\n",
+      "['Belgium' 'Bulgaria' 'Czechia' 'Denmark' 'Germany' 'Estonia' 'Ireland'\n",
+      " 'Greece' 'Spain' 'France' 'Croatia' 'Italy' 'Cyprus' 'Latvia' 'Lithuania'\n",
+      " 'Luxembourg' 'Hungary' 'Malta' 'Netherlands' 'Austria' 'Poland'\n",
+      " 'Portugal' 'Romania' 'Slovenia' 'Slovakia' 'Finland' 'Sweden'\n",
+      " 'United Kingdom']\n",
+      "\n",
+      "\n",
+      "Value:\n",
+      "[ 34697.  45114.  19163.   7832.  13280.  15200.  24077.  69993.  34897.\n",
+      "  77774.     nan 166420.  13525.   2973.  16368.    946.  11694.  23865.\n",
+      " 110887.  48734. 128596. 118552.  12221.  21149.  33778.  24974.  60224.\n",
+      " 350990.  28681.  36788.  18806.  12980.  10081.  24286.  58300.  42382.\n",
+      "  73837. 159674.   9590.   2904.  16951.    984.  12403.  24511. 109098.\n",
+      "  19996. 127622.  92391.  13191.  17872.  62465. 337570.  31297.  34718.\n",
+      "  17691.  12376.   9360.  24420.  66857.  41590.  78182.  11537. 155482.\n",
+      "   8992.   3041.  16627.    986.  14287.  25273. 108732.  20566.  22455.\n",
+      "  89152.  36130.  62215. 310600.  28425.  33536.  18558.  15437.   6934.\n",
+      "  24597.  67947.  40173.  28743.  12321. 153261.   8758.   4393.  16143.\n",
+      "    966.  14727. 109389.  20519.  22358. 103460.  18980.  36553.  33386.\n",
+      "  63694. 317580.  25653.  34921.  19074.  15750.   6765.  25567.  70560.\n",
+      "  39119.  28684. 149715.   8728.   4266.  15619.    958.  16955. 109053.\n",
+      "  20393.  22156.  95335.  18988.  36411.  28948.  61052. 307850.  23958.\n",
+      "  35642.  19003.  11155.  16790.   6634.  26250.  36864.  27306.  12407.\n",
+      " 144817.   8615.   4216.  15133.    970.  14236. 109251.  18987.  22119.\n",
+      "  96760.  19369.  28704.  63396. 417925.  10719.  36218.  20995.  10577.\n",
+      "  17042.   6508.  28091.  75905.  36707. 263200.  14164. 141977.   8551.\n",
+      "  16480.  13968.    938.  14867. 118251.  18443.  22473.  99896.  19854.\n",
+      "  37306.  29064.  66535. 419399.  11389.  37010.  21672.  11493.  18383.\n",
+      "   6459.  29393.  75112.  36981. 263849.  14907. 134374.   8617.  13606.\n",
+      "  13933.  15042.  27852. 121291.  16863.  22719. 101104.  19945.  29003.\n",
+      "  66409. 429989.  14321.  35470.  21901.  12197.   6424.  29342.  74661.\n",
+      "  37290. 264104.  12211. 132280.   8746.  13659.  13597.   3481.  15049.\n",
+      "  28476. 127073.  15691.  24066. 102555.  20370.  32231.  30222.  68358.\n",
+      " 430190.  17615.  36068.  21889.  11816.  24224.   6333.  30369.  73242.\n",
+      "  37685. 260626.  12632. 124851.  10193.  14091.  13977.   4011.  15084.\n",
+      "  29068. 135437.  14892.  24161. 106563.    436.  20428.  31716.  69256.]\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# check again the unique values in each column\n",
+    "for column in df_number.columns:\n",
+    "    print(column + ':')\n",
+    "    uniq_val(column)\n",
+    "    print('\\n')"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   }
  ],
  "metadata": {
