--- a/3.2 EU Number of civil servants - Data visualization.ipynb
+++ b/3.2 EU Number of civil servants - Data visualization.ipynb
@@ -35,10 +35,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "outputs": [],
    "source": [
-    "df_number ="
+    "df_number = pd.read_csv('/Volumes/GoogleDrive-114951830941804947409/My Drive/Data analyst/Projects/Civil_Servant_Salary_EU/modified_data/3. EU_Number of civil servants.csv')"
    ],
    "metadata": {
     "collapsed": false,
