--- a/1.1 EU Income - Data wrangling.ipynb
+++ b/1.1 EU Income - Data wrangling.ipynb
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 3,
    "outputs": [],
    "source": [
     "# import relevant libraries\n",
@@ -75,11 +75,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 4,
    "outputs": [],
    "source": [
     "# load the data\n",
-    "df_income = pd.read_csv('/Volumes/GoogleDrive/My Drive/Data analyst/Projects/Civil Servants remuneration/original data/ilc_di15/ilc_di15_1_Data.csv')"
+    "df_income = pd.read_csv('/Volumes/GoogleDrive-114951830941804947409/My Drive/Data analyst/Projects/Civil_Servant_Salary_EU/original_data/1. Mean and median income by broad group of citizenship (population aged 18 and over) [ilc_di15].csv')"
    ],
    "metadata": {
     "collapsed": false,
@@ -102,14 +102,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 5,
    "outputs": [
     {
      "data": {
       "text/plain": "   TIME      GEO  UNIT                     INDIC_IL            CITIZEN    SEX  \\\n0  2012  Belgium  Euro  Mean equivalised net income  Reporting country  Total   \n1  2012  Belgium  Euro  Mean equivalised net income  Reporting country  Total   \n2  2012  Belgium  Euro  Mean equivalised net income  Reporting country  Total   \n3  2012  Belgium  Euro  Mean equivalised net income  Reporting country  Total   \n4  2012  Belgium  Euro  Mean equivalised net income  Reporting country  Total   \n\n                   AGE   Value  \n0  From 18 to 54 years  23 865  \n1  From 18 to 59 years  23 950  \n2  From 18 to 64 years  23 716  \n3     18 years or over  22 365  \n4  From 20 to 64 years  23 833  ",
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>TIME</th>\n      <th>GEO</th>\n      <th>UNIT</th>\n      <th>INDIC_IL</th>\n      <th>CITIZEN</th>\n      <th>SEX</th>\n      <th>AGE</th>\n      <th>Value</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>2012</td>\n      <td>Belgium</td>\n      <td>Euro</td>\n      <td>Mean equivalised net income</td>\n      <td>Reporting country</td>\n      <td>Total</td>\n      <td>From 18 to 54 years</td>\n      <td>23 865</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>2012</td>\n      <td>Belgium</td>\n      <td>Euro</td>\n      <td>Mean equivalised net income</td>\n      <td>Reporting country</td>\n      <td>Total</td>\n      <td>From 18 to 59 years</td>\n      <td>23 950</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>2012</td>\n      <td>Belgium</td>\n      <td>Euro</td>\n      <td>Mean equivalised net income</td>\n      <td>Reporting country</td>\n      <td>Total</td>\n      <td>From 18 to 64 years</td>\n      <td>23 716</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>2012</td>\n      <td>Belgium</td>\n      <td>Euro</td>\n      <td>Mean equivalised net income</td>\n      <td>Reporting country</td>\n      <td>Total</td>\n      <td>18 years or over</td>\n      <td>22 365</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>2012</td>\n      <td>Belgium</td>\n      <td>Euro</td>\n      <td>Mean equivalised net income</td>\n      <td>Reporting country</td>\n      <td>Total</td>\n      <td>From 20 to 64 years</td>\n      <td>23 833</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
-     "execution_count": 57,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 6,
    "outputs": [
     {
      "name": "stdout",
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 7,
    "outputs": [],
    "source": [
     "# change the column names to lowercase\n",
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 8,
    "outputs": [],
    "source": [
     "# drop the Purchasing power standard (PPS) rows\n",
@@ -212,15 +212,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 9,
    "outputs": [
     {
-     "data": {
-      "text/plain": "0        23865.0\n1        23950.0\n2        23716.0\n3        22365.0\n4        23833.0\n          ...   \n24415        NaN\n24416        NaN\n24417        NaN\n24418        NaN\n24419        NaN\nName: value, Length: 24420, dtype: float64"
-     },
-     "execution_count": 61,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'np' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[0;31mNameError\u001B[0m                                 Traceback (most recent call last)",
+      "Input \u001B[0;32mIn [9]\u001B[0m, in \u001B[0;36m<cell line: 2>\u001B[0;34m()\u001B[0m\n\u001B[1;32m      1\u001B[0m \u001B[38;5;66;03m# transform the values in the \"value\" column\u001B[39;00m\n\u001B[0;32m----> 2\u001B[0m df_income\u001B[38;5;241m.\u001B[39mvalue\u001B[38;5;241m.\u001B[39mreplace(\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124m:\u001B[39m\u001B[38;5;124m\"\u001B[39m, \u001B[43mnp\u001B[49m\u001B[38;5;241m.\u001B[39mNaN, regex\u001B[38;5;241m=\u001B[39m\u001B[38;5;28;01mTrue\u001B[39;00m, inplace\u001B[38;5;241m=\u001B[39m\u001B[38;5;28;01mTrue\u001B[39;00m) \u001B[38;5;66;03m# change the \":\" to NaN\u001B[39;00m\n\u001B[1;32m      3\u001B[0m df_income\u001B[38;5;241m.\u001B[39mvalue\u001B[38;5;241m.\u001B[39mreplace(\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124m \u001B[39m\u001B[38;5;124m\"\u001B[39m, \u001B[38;5;124m\"\u001B[39m\u001B[38;5;124m\"\u001B[39m, regex\u001B[38;5;241m=\u001B[39m\u001B[38;5;28;01mTrue\u001B[39;00m, inplace\u001B[38;5;241m=\u001B[39m\u001B[38;5;28;01mTrue\u001B[39;00m) \u001B[38;5;66;03m# remove spaces between the thousand separator\u001B[39;00m\n\u001B[1;32m      4\u001B[0m df_income\u001B[38;5;241m.\u001B[39mvalue\u001B[38;5;241m.\u001B[39mastype(\u001B[38;5;124m'\u001B[39m\u001B[38;5;124mfloat64\u001B[39m\u001B[38;5;124m'\u001B[39m)\n",
+      "\u001B[0;31mNameError\u001B[0m: name 'np' is not defined"
+     ]
     }
    ],
    "source": [
@@ -238,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": null,
    "outputs": [],
    "source": [
     "# delete the \" equivalized net income\" from the value columns\n",
@@ -255,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": null,
    "outputs": [],
    "source": [
     "# drop null values in the dataset\n",
@@ -270,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": null,
    "outputs": [],
    "source": [
     "# merge the data to have two columns for mean and median values\n",
@@ -296,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": null,
    "outputs": [],
    "source": [
     "# simplify the age column\n",
@@ -312,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": null,
    "outputs": [],
    "source": [
     "# store the new data\n",
