Updating preliminary analisys
- point added to the header of each Jupyter notebooks

--- a/Preliminary analysis/1.2 EU Income - Data visualization.ipynb
+++ b/Preliminary analysis/1.2 EU Income - Data visualization.ipynb
@@ -4,8 +4,9 @@
    "cell_type": "markdown",
    "source": [
     "# Project name: Civil Servants Remuneration in the EU\n",
-    "## Part 1: Mean and median income by broad group of citizenship (population aged 18 and over)\n",
-    "### Step 2: Data visualization"
+    "## Preliminary analysis\n",
+    "### Part 1: Mean and median income by broad group of citizenship (population aged 18 and over)\n",
+    "#### Step 2: Data visualization"
    ],
    "metadata": {
     "collapsed": false,
