--- a/Preliminary analysis/3.1 EU Number of civil servants - Data wrangling.ipynb
+++ b/Preliminary analysis/3.1 EU Number of civil servants - Data wrangling.ipynb
@@ -4,8 +4,9 @@
    "cell_type": "markdown",
    "source": [
     "# Project name: Civil Servants Remuneration in the EU\n",
-    "## Part 3: EU Civil Servant number of civil servants employed\n",
-    "### Step 1: Data wrangling"
+    "## Preliminary analysis\n",
+    "### Part 3: EU Civil Servant number of civil servants employed\n",
+    "#### Step 1: Data wrangling"
    ],
    "metadata": {
     "collapsed": false,
