--- a/Preliminary analysis/1.1 EU Income - Data wrangling.ipynb
+++ b/Preliminary analysis/1.1 EU Income - Data wrangling.ipynb
@@ -4,8 +4,9 @@
    "cell_type": "markdown",
    "source": [
     "# Project name: Civil Servants Remuneration in the EU\n",
-    "## Part 1: Mean and median income by broad group of citizenship (population aged 18 and over)\n",
-    "### Step 1: Data wrangling"
+    "## Preliminary analysis\n",
+    "### Part 1: Mean and median income by broad group of citizenship (population aged 18 and over)\n",
+    "#### Step 1: Data wrangling"
    ],
    "metadata": {
     "collapsed": false,
