--- a/Preliminary analysis/2.1 EU Civil Servants Salary - Data wrangling.ipynb
+++ b/Preliminary analysis/2.1 EU Civil Servants Salary - Data wrangling.ipynb
@@ -4,8 +4,9 @@
    "cell_type": "markdown",
    "source": [
     "# Project name: Civil Servants Remuneration in the EU\n",
-    "## Part 2: EU Civil Servant average salary\n",
-    "### Step 1: Data wrangling"
+    "## Preliminary analysis\n",
+    "### Part 2: EU Civil Servant average salary\n",
+    "#### Step 1: Data wrangling"
    ],
    "metadata": {
     "collapsed": false,
