--- a/Preliminary analysis/2.2 EU Civil Servants Salary - Data visualization.ipynb
+++ b/Preliminary analysis/2.2 EU Civil Servants Salary - Data visualization.ipynb
@@ -4,8 +4,9 @@
    "cell_type": "markdown",
    "source": [
     "# Project name: Civil Servants Remuneration in the EU\n",
-    "## Part 2: EU Civil Servant average salary\n",
-    "### Step 2: Data visualization"
+    "## Preliminary analysis\n",
+    "### Part 2: EU Civil Servant average salary\n",
+    "#### Step 2: Data visualization"
    ],
    "metadata": {
     "collapsed": false,
