--- a/Preliminary analysis/3.2 EU Number of civil servants - Data visualization.ipynb
+++ b/Preliminary analysis/3.2 EU Number of civil servants - Data visualization.ipynb
@@ -4,8 +4,9 @@
    "cell_type": "markdown",
    "source": [
     "# Project name: Civil Servants Remuneration in the EU\n",
-    "## Part 3: EU Number of civil servants\n",
-    "### Step 2: Data visualization"
+    "## Preliminary analysis\n",
+    "### Part 3: EU Number of civil servants\n",
+    "#### Step 2: Data visualization"
    ],
    "metadata": {
     "collapsed": false,
