--- a/Civil servant salary comparison.ipynb
+++ b/Civil servant salary comparison.ipynb
@@ -1,16 +1,100 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
+   "source": [
+    "# Project name: Civil Servants Remuneration in the EU\n",
+    "## Final analysis\n",
+    "### Part 1: Data wrangling"
+   ],
    "metadata": {
-    "collapsed": true,
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "outputs": [],
+   "source": [
+    "# import relevant libraries\n",
+    "import pandas as pd"
+   ],
+   "metadata": {
+    "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
     }
-   },
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "outputs": [],
-   "source": []
+   "source": [
+    "# load the datasets\n",
+    "df_income = pd.read_csv('/Volumes/GoogleDrive-114951830941804947409/My Drive/Data analyst/Projects/Civil_Servant_Salary_EU/modified_data/1. Mean and median income in the EU.csv')\n",
+    "df_salary = pd.read_csv('/Volumes/GoogleDrive-114951830941804947409/My Drive/Data analyst/Projects/Civil_Servant_Salary_EU/modified_data/2. EU Civil Servant average salary.csv')\n",
+    "df_number = pd.read_csv('/Volumes/GoogleDrive-114951830941804947409/My Drive/Data analyst/Projects/Civil_Servant_Salary_EU/modified_data/3. EU_Number of civil servants.csv')"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   time      geo    sex         age  value_mean  value_median\n",
+      "0  2012  Belgium  Total    18 to 54     23865.0       22750.0\n",
+      "1  2012  Belgium  Total    18 to 59     23950.0       22754.0\n",
+      "2  2012  Belgium  Total    18 to 64     23716.0       22452.0\n",
+      "3  2012  Belgium  Total  18 or over     22365.0       20773.0\n",
+      "4  2012  Belgium  Total    20 to 64     23833.0       22514.0\n",
+      "\n",
+      "\n",
+      "   time       geo   value\n",
+      "0  2014   Belgium  2647.7\n",
+      "1  2014  Bulgaria   547.4\n",
+      "2  2014   Czechia   948.5\n",
+      "3  2014   Denmark  2515.6\n",
+      "4  2014   Germany  3654.3\n"
+     ]
+    }
+   ],
+   "source": [
+    "# view data\n",
+    "print(df_income.head())\n",
+    "print('\\n')\n",
+    "print(df_salary.head())"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   }
  ],
  "metadata": {
