--- a/Preliminary analysis/2.1 EU Civil Servants Salary - Data wrangling.ipynb
+++ b/Preliminary analysis/2.1 EU Civil Servants Salary - Data wrangling.ipynb
@@ -207,7 +207,7 @@
    "outputs": [],
    "source": [
     "# store the new data\n",
-    "df_salary.to_csv('/Volumes/GoogleDrive-114951830941804947409/My Drive/Data analyst/Projects/Civil_Servant_Salary_EU/modified_data/2. EU Civil Servant average salary.csv')"
+    "df_salary.to_csv('/Volumes/GoogleDrive-114951830941804947409/My Drive/Data analyst/Projects/Civil_Servant_Salary_EU/modified_data/2. EU Civil Servant average salary.csv', index=False)"
    ],
    "metadata": {
     "collapsed": false,
